# Insights-Forge-Version-2.0

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  TODO.md  data_converted.csv  docker-compose.yml  render.yaml  sample_students.csv
.claude/: identity.json  (+1 more)
insight-forge-backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  project_structure.txt  pyproject.toml  requirements.txt  sample_dataset.csv  serve.py
insight-forge-backend/app/: lifespan.py  main.py
insight-forge-backend/app/ai/: __init__.py
insight-forge-backend/app/core/: config.py  enums.py  exceptions.py  logging.py  roles.py  runtime_metrics.py  token_types.py
insight-forge-backend/app/db/: base.py  engine.py  health.py  session.py  tenant_context.py
insight-forge-backend/app/dependencies/: auth.py  services.py
insight-forge-backend/app/ingestion/: cleaner.py  orchestrator.py  quality_pipeline.py  trigger.py
insight-forge-backend/app/middleware/: request_id.py  security_headers.py  tenant.py  timing.py
insight-forge-backend/app/models/: __init__.py  background_task.py  budget_allocation.py  coaching_intervention.py  cohort.py  dataset.py  session.py  student_metric.py  tenant.py  user.py
insight-forge-backend/migrations/: env.py
insight-forge-backend/scripts/: benchmark_cleaning.py  benchmark_queries.py  bootstrap.py  create_admin_credentials.py  create_database.py  create_dataset_records.py  seed_database.py  seed_demo_data.py  verify_api.py  verify_cleaning.py  verify_migrations.py  verify_rls.py
insight-forge-backend/tests/: conftest.py
(+400 files in other folders)
