[build-system]
requires = ["setuptools>=83.0"]
build-backend = "setuptools.build_meta"

[project]
name = "insight-forge-backend"
version = "2.0.0"
description = "Enterprise educational decision intelligence backend"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]>=2.0,<2.1",
    "psycopg[binary,pool]>=3.3,<4.0",
    "alembic>=1.16,<2.0",
    "pydantic>=2.11,<3.0",
    "pydantic-settings>=2.10,<3.0",
    "python-dotenv>=1.1,<2.0",
    "email-validator",
    "python-multipart",
    "bcrypt",
    "python-jose[cryptography]",
    "cryptography",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "rapidfuzz>=3.6,<4",
    "openpyxl>=3.1,<4",
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4,<9.0",
    "pytest-asyncio>=1.0,<2.0",
    "httpx>=0.28,<1.0",
    "ruff>=0.12,<1.0",
    "mypy>=1.16,<2.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.mypy]
python_version = "3.13"
strict = true
